<resources>
    <string name="app_name">MyBooks</string>
    <string name="tab_books">Books</string>
    <string name="tab_add_book">Add Book</string>
    <string name="tab_about">About</string>
    <string name="isbn">"ISBN:</string>
    <string name="title">Title:</string>
    <string name="writer">Writer:</string>
    <string name="publisher">Publisher (optional):</string>
    <string name="publisher1">Publisher:</string>
    <string name="year">Year (optional):</string>
    <string name="year1">Year: </string>
    <string name="genre">Genre (optional):</string>
    <string name="genre1">Genre:</string>
    <string name="cpage">Current page: </string>
    <string name="npages">Number of pages:</string>
    <string name="was_happening">What happened previously:</string>
    <string name="happened">What happened now?</string>
    <string name="save">Save</string>
    <string name="remove">Remove Book</string>
    <string name="add_book">Add Book</string>
    <string name="version">Version 3.4</string>
    <string name="version_date">Built on 02/07/2019</string>
    <string name="developer">Developed by Carlos Tojal (carlostojal)</string>
    <string name="repo">github.com/carlostojal/MyBooks</string>
</resources>
